# cinccino

./: Cargo.toml  LICENSE  clippy.toml
.github/workflows/: release-extension.yml
benches/: parse_bench.rs
src/: ast.rs  circomlib_docs.rs  constraint_checker.rs  formatter.rs  incremental.rs  lexer.rs  lib.rs  parser.rs  pretty_print.rs  scope.rs  span.rs  symbol.rs  symbol_table.rs  trivia.rs  type_checker.rs  underconstrained.rs  visitor.rs  walker.rs
src/server/: backend.rs  call_hierarchy.rs  code_action.rs  completion.rs  document.rs  document_symbol.rs  formatting.rs  hover.rs  mod.rs  rename.rs  signature_help.rs  tracing_layer.rs
tests/: backend.rs  circom_feature_matrix.rs  circom_regression.rs  circomlib.rs  circomlib_all.rs  lsp_integration.rs  lsp_server.rs  parser_comprehensive.rs  semantic_analysis.rs
tests/fixtures/circom_regression/: bug_assign_input.circom  bug_assign_input.expected_diagnostics.json  bug_bus_type_mismatch.circom  bug_bus_type_mismatch.expected_diagnostics.json  bug_duplicate_template.circom  bug_duplicate_template.expected_diagnostics.json  bug_non_quadratic.circom  bug_non_quadratic.expected_diagnostics.json  bug_param_count.circom  bug_param_count.expected_diagnostics.json  bug_signal_in_fn.circom  bug_signal_in_fn.expected_diagnostics.json  bug_signal_to_var.circom  bug_signal_to_var.expected_diagnostics.json  (+15 more)
vscode-extension/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  release.sh
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: circom.tmLanguage.json
(+19 files in other folders)
